feat: 快捷键冲突检测